--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
   "homepage": "https://github.com/plhyhc/pi-aquarium-controller#readme",
   "dependencies": {
+    "@types/node": "^17.0.8",
     "ds18b20": "^0.1.0",
+    "mysql": "^2.18.1",
     "node-dht-sensor": "^0.4.3"
   }
 }
