--- a/src/config.sample.json
+++ b/src/config.sample.json
@@ -13,5 +13,8 @@
             "id": "<your-1-wire-id-here>"
         },
         "description": "DS18B20 water temperature sensor module. The ID is the 1-wire id."
+    },
+    "mongo": {
+        "url": "<your-url-here>"
     }
 }
